--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -16,7 +16,8 @@ weight = 3
 address = "125/A, CA Commercial Area, California, USA"
 author = "themefisher"
 contact_form_action = "#"
-copyright = "Copyrighht &copy; 2020 a theme by [themefisher](https://themefisher.com)"
+copyright_ower = "Copyrighht &copy; 2020 a theme by [themefisher](https://themefisher.com)"
+copyright_development = "Copyrighht &copy; 2020 a theme by [themefisher](https://themefisher.com)"
 description = "This is meta description"
 email = "steve.fruits@email.com"
 google_analitycs_id = ""
