--- a/exampleSite/data/about.yml
+++ b/exampleSite/data/about.yml
@@ -13,7 +13,7 @@ author:
   - Incubator
 experience:
   enable: true
-  title: Work Experiences.
+  title: What we are going.
   experience_item:
   - name: Community building
     duration: ''
