--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -22,7 +22,7 @@ description = "This is meta description"
 email = "steve.fruits@email.com"
 google_analitycs_id = ""
 home = "Home"
-logo = "images/logo.png"
+logo = "images/logo.svg"
 mobile = "+880 2544 658 256"
 [params.gmap]
 enable = false
