add some role page

--- a/exampleSite/data/about.yml
+++ b/exampleSite/data/about.yml
@@ -6,7 +6,7 @@ author:
   bio: All great innovation and social progress are born of madness.
   content: We are mad guys, we are doing madness things. If you want to join us, please
     make sure you are exited about what we are doing.
-  signature: images/signature.png
+  signature: images/signature.svg
   favourite_topic:
   - Community
   - For-Profit DAO
